--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,5 +1,9 @@
+# $Id: INSTALL.txt,v 1.2.6.2 2008/05/23 22:17:37 sdboyer Exp $
+
 Place the module files in the appropriate directory. If you're not sure,
 try 'sites/all/modules'. 
 
 Then navigate to administer >> site building >> modules and activate
-this the panels module and the panel pages module.
+the panels module, along with any of the accompanying side modules you'd like to use.
+The Panels module itself only provides an API - you MUST install these other modules
+if you want to do much of anything.
