--- a/po/de.po
+++ b/po/de.po
@@ -1,4 +1,4 @@
-# $Id: de.po,v 1.1.4.2 2007/11/15 14:05:32 hass Exp $
+# $Id: de.po,v 1.1.4.3 2008/05/30 05:50:53 hass Exp $
 #
 # LANGUAGE translation of Drupal (general)
 # Copyright YEAR NAME <EMAIL@ADDRESS>
@@ -23,7 +23,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: panels 5.x\n"
 "POT-Creation-Date: 2007-03-24 21:42+0100\n"
-"PO-Revision-Date: 2007-11-09 19:59+0100\n"
+"PO-Revision-Date: 2008-04-05 01:52+0100\n"
 "Last-Translator: Alexander Hass\n"
 "Language-Team: Alexander Hass\n"
 "MIME-Version: 1.0\n"
@@ -729,7 +729,7 @@ msgstr "Kategorien"
 #: content_types/node_form.inc:234
 #, fuzzy
 msgid "Categories."
-msgstr "Kategorien"
+msgstr "Kategorien."
 
 #: content_types/node_form.inc:238
 msgid "Book options"
@@ -746,7 +746,7 @@ msgstr "Eingabeformat"
 #: content_types/node_form.inc:268
 #, fuzzy
 msgid "Input format."
-msgstr "Eingabeformat"
+msgstr "Eingabeformat."
 
 #: content_types/node_type_desc.inc:37
 msgid "Node type description goes here."
@@ -911,9 +911,8 @@ msgid "If this is set, override the View URL; this can sometimes be useful to se
 msgstr "Sobald aktiviert, wird die Ansichten URL überschrieben; Manchmal kann es sinnvoll sein, die Panel URL einzusetzten."
 
 #: includes/common.inc:23
-#, fuzzy
 msgid "New @s"
-msgstr "Neu @s"
+msgstr ""
 
 #: includes/common.inc:27
 msgid "New content of other types"
@@ -936,9 +935,8 @@ msgid "Other"
 msgstr "Andere"
 
 #: includes/common.inc:70
-#, fuzzy
 msgid "Allowed @s content"
-msgstr "Inhalt hinzufügen"
+msgstr ""
 
 #: includes/common.inc:85
 #: panels_page/panels_page.admin.inc:1633
