--- a/translations/panels.de.po
+++ b/translations/panels.de.po
@@ -1,4 +1,4 @@
-# $Id: panels.de.po,v 1.1.2.2 2009/08/16 21:51:49 hass Exp $
+# $Id: panels.de.po,v 1.1.2.3 2009/08/16 21:54:23 hass Exp $
 #
 # LANGUAGE translation of Drupal (general)
 # Copyright YEAR NAME <EMAIL@ADDRESS>
@@ -23,7 +23,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: panels 5.x\n"
 "POT-Creation-Date: 2009-08-16 16:42+0200\n"
-"PO-Revision-Date: 2009-08-16 23:49+0100\n"
+"PO-Revision-Date: 2009-08-16 23:53+0100\n"
 "Last-Translator: Alexander Haß\n"
 "Language-Team: Alexander Hass\n"
 "MIME-Version: 1.0\n"
@@ -1410,11 +1410,11 @@ msgstr "Aktualisieren und Vorschau anzeigen"
 
 #: plugins/task_handlers/panel_context.inc:698
 msgid "Administrative title"
-msgstr "Verwaltungs-Titel"
+msgstr "Administrativer Titel"
 
 #: plugins/task_handlers/panel_context.inc:699
 msgid "Administrative title of this variant."
-msgstr "Verwaltungs-Titel von dieser Variante."
+msgstr "Administrativer Titel von dieser Variante."
 
 #: plugins/task_handlers/panel_context.inc:705
 msgid "Disable Drupal blocks/regions"
